Fixed burger menu visibility

--- a/src/components/burgerMenu/BurgerMenu.module.css
+++ b/src/components/burgerMenu/BurgerMenu.module.css
@@ -1,36 +1,32 @@
-.BurgerMenu {
+.Menu {
     position: fixed;
-    z-index: 1000;
     top: 0;
     left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+    pointer-events: none;
+    z-index: 1000;
+}
 
-    & .Menu {
-        height: 100vh;
-        width: 100vw;
-        background-color: black;
-        padding: 25px;
-        gap: 40px;
-        display: flex;
-        flex-direction: column;
-        transform: translateX(-100%);
-        transition: transform 0.3s ease;
+.MenuOpen {
+    transform: translateX(0);
+    pointer-events: all;
 
-        & ul {
-            list-style-type: none;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-    }
+     & ul {
+        list-style-type: none;
+     }
+}
 
-    & .MenuOpen {
-        transform: translateX(0);
-    }
-
-    & .OpenMenu {
-        position: fixed;
-        top: 20px;
-        left: 20px;
-        z-index: 1001;
-    }
+.OpenMenu {
+    z-index: 1100;
+    cursor: pointer;
+    position: fixed;
+    top: 20px;
+    left: 10px;
 }
